syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员等级
message AddMemberLevelReq {
  int64 id = 1; //主键ID
  string name = 2; //等级名称
  int32 level = 3; //等级
  int32 growth_point = 4; //升级所需成长值
  float discount_rate = 5; //折扣率(0-100)
  int32 free_freight = 6; //是否免运费
  int32 comment_extra = 7; //是否可评论获取奖励
  string privileges = 8; //会员特权JSON
  string remark = 9; //备注
  int32 is_enabled = 10; //是否启用
  int64 create_by = 13; //创建人ID
}

message AddMemberLevelResp {
  string pong = 1;
}

// 删除会员等级
message DeleteMemberLevelReq {
  repeated int64 ids = 1;
}

message DeleteMemberLevelResp {
  string pong = 1;
}

// 更新会员等级
message UpdateMemberLevelReq {
  int64 id = 1; //主键ID
  string name = 2; //等级名称
  int32 level = 3; //等级
  int32 growth_point = 4; //升级所需成长值
  float discount_rate = 5; //折扣率(0-100)
  int32 free_freight = 6; //是否免运费
  int32 comment_extra = 7; //是否可评论获取奖励
  string privileges = 8; //会员特权JSON
  string remark = 9; //备注
  int32 is_enabled = 10; //是否启用
  int64 update_by = 14; //更新人ID
}

message UpdateMemberLevelResp {
  string pong = 1;
}

// 更新会员等级状态
message UpdateMemberLevelStatusReq {
  int64 id = 1; //主键ID
  int32 is_enabled = 2; //是否启用
}

message UpdateMemberLevelStatusResp {
  string pong = 1;
}

// 查询会员等级详情
message QueryMemberLevelDetailReq {
  int64 id = 1; //等级id
}

message QueryMemberLevelDetailResp {
  int64 id = 1; //主键ID
  string name = 2; //等级名称
  int32 level = 3; //等级
  int32 growth_point = 4; //升级所需成长值
  float discount_rate = 5; //折扣率(0-100)
  int32 free_freight = 6; //是否免运费
  int32 comment_extra = 7; //是否可评论获取奖励
  string privileges = 8; //会员特权JSON
  string remark = 9; //备注
  int32 is_enabled = 10; //是否启用
  int64 create_by = 11; //创建人ID
  string create_time = 12; //创建时间
  int64 update_by = 13; //更新人ID
  string update_time = 14; //更新时间
  int32 is_deleted = 15; //是否删除

}

// 分页查询会员等级列表
message QueryMemberLevelListReq {
  string name = 1; //等级名称
  int64 page_num = 2; //第几页
  int64 page_size = 3; //每页的数量
}

message MemberLevelListData {
  int64 id = 1; //主键ID
  string name = 2; //等级名称
  int32 level = 3; //等级
  int32 growth_point = 4; //升级所需成长值
  float discount_rate = 5; //折扣率(0-100)
  int32 free_freight = 6; //是否免运费
  int32 comment_extra = 7; //是否可评论获取奖励
  string privileges = 8; //会员特权JSON
  string remark = 9; //备注
  int32 is_enabled = 10; //是否启用
  int64 create_by = 11; //创建人ID
  string create_time = 12; //创建时间
  int64 update_by = 13; //更新人ID
  string update_time = 14; //更新时间
  int32 is_deleted = 15; //是否删除

}

message QueryMemberLevelListResp {
  int64 total = 1;
  repeated  MemberLevelListData list = 2;
}

// 会员等级
service MemberLevelService {
  // 添加会员等级
  rpc AddMemberLevel(AddMemberLevelReq) returns (AddMemberLevelResp){}
  // 删除会员等级
  rpc DeleteMemberLevel(DeleteMemberLevelReq) returns (DeleteMemberLevelResp){}
  // 更新会员等级
  rpc UpdateMemberLevel(UpdateMemberLevelReq) returns (UpdateMemberLevelResp ){}
  // 更新会员等级状态
  rpc UpdateMemberLevelStatus(UpdateMemberLevelStatusReq) returns (UpdateMemberLevelStatusResp ){}
  // 查询会员等级详情
  rpc QueryMemberLevelDetail(QueryMemberLevelDetailReq) returns (QueryMemberLevelDetailResp){}
  // 查询会员等级列表
  rpc QueryMemberLevelList(QueryMemberLevelListReq) returns (QueryMemberLevelListResp){}


}
